--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,5 +23,6 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.9.2", features = [] }
 tauri-plugin-log = "2"
-rusqlite = { version = "0.31", features = ["bundled"] }
+rusqlite = { version = "0.37", features = ["bundled"] }
+rusqlite_migration = { version = "2.3", features = [] }
 thiserror = "1.0"
